botão para passageiro já funcionando, mostrando cadastro e direcionando para escolha da viagem

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,7 +8,7 @@
 
     <div class="d-flex flex-column gap-4" style="width: 100%; max-width: 500px;">
         <!-- Botão Passageiro -->
-        <a href="" class="btn btn-success btn-lg d-flex align-items-center justify-content-center gap-2 shadow rounded-4 p-3">
+        <a href="{% url 'home:passageiro'%}?organizador=0" class="btn btn-success btn-lg d-flex align-items-center justify-content-center gap-2 shadow rounded-4 p-3">
             <i class="bi bi-bus-front-fill fs-2"></i>
             <span class="fs-5 fw-semibold">Sou um passageiro, quero viajar</span>
         </a>
