--- a/templates/main.html
+++ b/templates/main.html
@@ -28,6 +28,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" href="/categorias">Categorias</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}">LogOut</a></li>
           </ul>
         </div>
       </div>
