--- a/home/templates/home/organizador.html
+++ b/home/templates/home/organizador.html
@@ -8,7 +8,7 @@
 
     <div class="d-flex flex-row gap-4" style="width: 100%; max-width: 500px;">
         <!-- Botão Ver Viagens -->
-        <a href="{% url 'viagem:find' %}" class="btn btn-success btn-lg d-flex align-items-center justify-content-center gap-2 shadow rounded-4 p-3">
+        <a href="{% url 'viagem:list_all' %}" class="btn btn-success btn-lg d-flex align-items-center justify-content-center gap-2 shadow rounded-4 p-3">
             <i class="bi bi-list-ul fs-2"></i>
             <span class="fs-5 fw-semibold">Ver Viagens Cadastradas</span>
         </a>
