--- a/templates/main.html
+++ b/templates/main.html
@@ -2,6 +2,7 @@
 <!doctype html>
 <html lang="pt-BR">
   <head>
+     {% block 'head' %}{% endblock %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
