--- a/templates/main.html
+++ b/templates/main.html
@@ -5,6 +5,8 @@
      {% block 'head' %}{% endblock %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src = {% static 'js/main.js' %}></script>
 
     <title>{% block 'title' %}{% endblock %}</title>
 
@@ -50,5 +52,22 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- liveToast-->
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+        <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <i class="fas fa-cat mr-1"></i>
+                <strong class="me-auto">Pynku</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+                <span id="toast-message">Default message</span>
+            </div>
+        </div>
+    </div>
+
+
+
   </body>
 </html>
