--- a/passageiro/templates/passageiro_form.html
+++ b/passageiro/templates/passageiro_form.html
@@ -4,7 +4,7 @@
 
 <html>
     <head>
-        <title>Formulário passageiro</title>
+        <title>Cadastro de passageiro</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
         <meta name="csrf-token" content="{{ csrf_token }}">
         <script src="{% static 'js/passageiro_form.js' %}"></script>
@@ -25,25 +25,25 @@
         <div class="container mt-5">
             <div class="row justify-content-center">
                 <div class="col-md-8 form-container">
-                    <h2 class="text-center mb-4">Formulário passageiro</h2>
+                    <h2 class="text-center mb-4">Complete seus dados:</h2>
                     <form id='form_passageiro' method='POST' action='/passageiro/save/'>
                     {% csrf_token %}    
                         <div class='row'>
             <input type='hidden' id='id' name='id' value='{{ obj_passageiro.id }}'>
     <div class='col-6'>
-        <label for='nome'>nome</label>
+        <label for='nome'>Nome</label>
         <input type='text' class='form-control' id='nome' name='nome' value=''>
     </div>
     <div class='col-6'>
-        <label for='rua'>rua</label>
+        <label for='rua'>Rua</label>
         <input type='text' class='form-control' id='rua' name='rua' value=''>
     </div>
 </div><div class='row'>    <div class='col-6'>
-        <label for='numero'>numero</label>
+        <label for='numero'>Numero</label>
         <input type='number' class='form-control' id='numero' name='numero' value=''>
     </div>
     <div class='col-6'>
-        <label for='cep'>cep</label>
+        <label for='cep'>Cep</label>
         <input type='text' class='form-control' id='cep' name='cep' value=''>
     </div>
         <input type='hidden' id='cidade' name='cidade' value=''>
@@ -81,7 +81,7 @@
     </div>
   
 </div><div class='row'>    <div class='col-6'>
-        <label for='obs'>obs</label>
+        <label for='obs'>Obs</label>
         <textarea class='form-control' id='obs' name='obs'></textarea>
     </div>
 </div>
